rearrange contact area

--- a/css/style.css
+++ b/css/style.css
@@ -605,7 +605,7 @@ canvas {
 	margin-top: 10px;
 }
 .services {
-	
+
 	list-style-type: none;
 }
 
@@ -1047,6 +1047,13 @@ canvas {
 
 .contact-title {
 	font-weight: 700;
+  text-align: center;
+}
+
+.contact-title2 {
+	font-weight: 700;
+  text-align: center;
+  color: white;
 }
 
 
@@ -1102,7 +1109,7 @@ canvas {
 	#about .col-md-2.col-sm-4 {
 		margin-top: 20px;
 	}
-	
+
 }
 
 @media only screen and (max-width: 767px) {
