--- a/css/style.css
+++ b/css/style.css
@@ -1056,6 +1056,14 @@ canvas {
   color: white;
 }
 
+a.phone {
+	text-decoration: none;
+	-webkit-transition: all 0.4s;
+	-webkit-transition: all 0.2s;
+	transition: all 0.2s;
+	color: #fff;
+}
+
 
 /*
 =========
